--- a/curriculum vitae.html
+++ b/curriculum vitae.html
@@ -10,28 +10,59 @@
     <header>
         <div id="titre">
                 <div class="name">
-                    <h1>Stephane POTIN</h1>
-                    <a>Opérateur régleur </a>
+                    <h1 class="h1">Stephane POTIN</h1>
+                    <div class="poste">Opérateur régleur </div>
                 </div>
                 <div class="presentation">
                     <div class="tel">
                         <i class="fa-solid fa-mobile"></i>
-                        <a href="callto:+33 (0)6 62 82 46 96">+33 (0)6 62 82 46 96</a>
+                        <a class="police_texte" href="callto:+33 (0)6 62 82 46 96">+33 (0)6 62 82 46 96</a>
                     </div>
                     <div class="adresse">
                         <i class="fa-solid fa-house"></i>
-                        <a>2 route de péronne,50530 Champeaux</a>
+                        <a>2 route de péronne, 50530 Champeaux</a>
                     </div>
                     <div class="naissance">
                         <i class="fa-solid fa-cake-candles"></i>
-                        <a>33 ans</a>
+                        <div class="tooltip">33ans<span class="tooltiptext">19/05/1989</span></div>
                     </div>
                     <div class="mail">
                         <i class="fa-solid fa-envelope"></i>
-                        <a  href="mailto:stephane.potin19@gmail.com">stephane.potin19@gmail.com</a>
+                        <a class="police_texte" href="mailto:stephane.potin19@gmail.com">stephane.potin19@gmail.com</a>
                     </div>
                 </div>
         </div>
-    </header> 
+    </header>
+    <section>
+        <div id="intro">
+            <img src="./images/20201107_213113.jpg"
+            id="identity"
+            alt="identité"
+            >
+            <h3>10 ans d’expérience dans le domaine de la restauration dont 3 ans sur le poste de directeur adjoint.</h3>
+        </div>
+        <div id="menu">
+            <div class="barre_menu">
+                <a class="police_texte"
+                 href="#diplomes">Diplômes</a>
+            </div>
+            <div class="barre_menu">
+                <a class="police_texte"
+                 href="#competences">Compétences</a>
+            </div>
+            <div class="barre_menu">
+                <a class="police_texte"
+                 href="#Parcours">Parcours professionel</a>
+            </div>
+            <div class="barre_menu">
+                <a class="police_texte"
+                 href="#interet">Intérêts</a>
+            </div>
+            <div class="barre_menu">
+                <a class="police_texte"
+                 href="#Moyens">Moyens de locomotion</a>
+            </div>
+        </div>
+    </section> 
 </body>
 </html>
